--- a/mod_gk_js_feed/styles/style.css
+++ b/mod_gk_js_feed/styles/style.css
@@ -14,48 +14,42 @@
 	width: 100%;
 }
 
+/* Status content type */
 .gkJSFeed > .gkAvatar,
 .gkJSFeed > .gkAvatar + .gkStatus {
 	float: left;
 	width: 50%;
 }
-
 .gkJSFeed > .gkStatus {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	padding: 25px;
 }
-
 .gkJSFeed > .gkAvatar-right {
 	float: right;
 }
-
 .gkJSFeed > .gkAvatar > img {
 	width: 100%;
 }
-
 .gkJSFeed .gkUsername {
 	font-size: 16px;
 	font-weight: 500;
 	padding: 15px 0;
 	text-transform: uppercase;
 }
-
 .gkJSFeed .gkUsername,
 .gkJSFeed .gkReadon:active,
 .gkJSFeed .gkReadon:focus,
 .gkJSFeed .gkReadon:hover {
 	color: #272727;
 }
-
 .gkJSFeed p,
 .gkJSFeed p a {
 	color: #999;
 	font-size: 13px;
 	line-height: 1.3;
 }
-
 .gkJSFeed p a:active,
 .gkJSFeed p a:focus,
 .gkJSFeed p a:hover,
@@ -64,10 +58,40 @@
 .gkJSFeed .gkUsername:hover {
 	color: #db4a37;
 }
-
 .gkJSFeed .gkReadon {
 	color: #db4a37;
 	font-size: 13px;
 	font-style: italic;
 	margin-top: 5px;
+}
+
+/* Photo content type */
+.gkJSFeedType-photo > a,
+.gkJSFeedType-photo > img {
+	height: 100%;
+	position: absolute;
+	width: 100%;
+}
+.gkJSFeedType-photo > h3 {
+	left: 0;
+	margin: 0;
+	padding: 25px;
+	position: absolute;
+}
+.gkJSFeedType-photo > .gkStatusText-top {
+	top: 0;
+}
+.gkJSFeedType-photo > .gkStatusText-bottom {
+	bottom: 0;
+}
+.gkJSFeedType-photo > .gkStatusText-dark a {
+	color: #272727;
+}
+.gkJSFeedType-photo > .gkStatusText-light a {
+	color: #fff;
+}
+.gkJSFeedType-photo > h3 a:active,
+.gkJSFeedType-photo > h3 a:focus,
+.gkJSFeedType-photo > h3 a:hover {
+	color: #db4a37;
 }
