--- a/mod_gk_js_feed/styles/style.css
+++ b/mod_gk_js_feed/styles/style.css
@@ -30,7 +30,16 @@
 	float: right;
 }
 .gkJSFeed > .gkAvatar > img {
+	opacity: 1; filter: alpha(opacity=100);
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
 	width: 100%;
+}
+.gkJSFeed > .gkAvatar:hover > img {
+	opacity: 0.85; filter: alpha(opacity=85);
 }
 .gkJSFeed .gkUsername {
 	font-size: 16px;
@@ -47,7 +56,7 @@
 .gkJSFeed p,
 .gkJSFeed p a {
 	color: #999;
-	font-size: 13px;
+	font-size: 14px;
 	line-height: 1.3;
 }
 .gkJSFeed p a:active,
@@ -56,7 +65,7 @@
 .gkJSFeed .gkUsername:active,
 .gkJSFeed .gkUsername:focus,
 .gkJSFeed .gkUsername:hover {
-	color: #db4a37;
+	color: #272727;
 }
 .gkJSFeed .gkReadon {
 	color: #db4a37;
@@ -70,8 +79,17 @@
 	background-position: center center;
 	background-size: cover;
 	height: 100%;
+	opacity: 1; filter: alpha(opacity=100);
 	position: absolute;
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
 	width: 100%;
+}
+.gkJSFeedType-photo > a:hover {
+	opacity: 0.85; fitler: alpha(opacity=85);
 }
 .gkJSFeedType-photo > h3 {
 	left: 0;
