--- a/mod_gk_js_feed/styles/style.css
+++ b/mod_gk_js_feed/styles/style.css
@@ -18,12 +18,18 @@
 .gkJSFeed > .gkAvatar,
 .gkJSFeed > .gkAvatar + .gkStatus {
 	float: left;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0);
+	-o-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 	width: 50%;
 }
 .gkJSFeed > .gkStatus {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	line-height: 1.4;
 	padding: 25px;
 }
 .gkJSFeed > .gkAvatar-right {
@@ -42,9 +48,10 @@
 	opacity: 0.85; filter: alpha(opacity=85);
 }
 .gkJSFeed .gkUsername {
+	display: block;
 	font-size: 16px;
 	font-weight: 500;
-	padding: 15px 0;
+	padding: 8px 0 14px;
 	text-transform: uppercase;
 }
 .gkJSFeed .gkUsername,
@@ -57,8 +64,9 @@
 .gkJSFeed p a {
 	color: #999;
 	font-size: 14px;
-	line-height: 1.3;
+	line-height: 1.4;
 }
+.gkJSFeed p { margin: 0 0 10px}
 .gkJSFeed p a:active,
 .gkJSFeed p a:focus,
 .gkJSFeed p a:hover,
@@ -86,6 +94,11 @@
 	-ms-transition: all .3s ease-out;
 	-o-transition: all .3s ease-out;
 	transition: all .3s ease-out;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0);
+	-o-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 	width: 100%;
 }
 .gkJSFeedType-photo > a:hover {
@@ -114,4 +127,21 @@
 .gkJSFeedType-photo > h3 a:focus,
 .gkJSFeedType-photo > h3 a:hover {
 	color: #db4a37;
+}
+
+@media (max-width:800px) {
+	.gkJSFeed > .gkStatus {
+		padding: 15px;
+	}
+	.gkJSFeed .gkUsername {
+		font-size: 14px;
+		padding: 4px 0 10px;
+	}
+	.gkJSFeed p,
+	.gkJSFeed p a {
+		font-size: 12px;
+	}
+	.gkJSFeed .gkReadon {
+		font-size: 11px;
+	}
 }
