--- a/mod_gk_js_feed/styles/style.css
+++ b/mod_gk_js_feed/styles/style.css
@@ -145,3 +145,67 @@
 		font-size: 11px;
 	}
 }
+
+/* User content type */
+.gkJSFeedType-user {
+	background: #e74c3c;
+}
+.gkJSFeedType-user > a {
+	background-position: center center;
+	background-size: cover;
+	height: 100%;
+	opacity: 1; filter: alpha(opacity=100);
+	position: absolute;
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0);
+	-o-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+	width: 100%!important;
+}
+.gkJSFeedType-user > a > span {
+	background: #e74c3c;
+	color: #fff;
+	height: 100%;
+	opacity: 0; filter: alpha(opacity=0);
+	position: absolute;
+	text-align: center;
+	top: 0;
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	width: 100%;
+}
+.gkJSFeedType-user:hover > a > span {
+	opacity: 1; filter: alpha(opacity=100);
+}
+.gkJSFeedType-user > a > span > em {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	font-size: 16px;
+	font-weight: bold;
+	left: 0;
+	line-height: 20px;
+	margin: 20px 0 0 0;
+	padding: 0 10px;
+	position: absolute;
+	top: 50%;
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	width: 100%;
+}
+.gkJSFeedType-user:hover > a > span > em {
+	margin: -10px 0 0 0;
+}
