--- a/mod_gk_js_feed/styles/style.css
+++ b/mod_gk_js_feed/styles/style.css
@@ -1,6 +1,6 @@
 /**
 * GK JS Feed - CSS style
-* @Copyright (C) 2013 Gavick.com
+* @Copyright (C) 2014 Gavick.com
 * @ All rights reserved
 * @ Released under GNU/GPL License : http://www.gnu.org/copyleft/gpl.html
 * @version $Revision: GK5 1.0 $
@@ -18,24 +18,40 @@
 .gkJSFeed > .gkAvatar,
 .gkJSFeed > .gkAvatar + .gkStatus {
 	float: left;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0);
+	-o-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 	width: 50%;
 }
 .gkJSFeed > .gkStatus {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	line-height: 1.4;
 	padding: 25px;
 }
 .gkJSFeed > .gkAvatar-right {
 	float: right;
 }
 .gkJSFeed > .gkAvatar > img {
+	opacity: 1; filter: alpha(opacity=100);
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
 	width: 100%;
 }
+.gkJSFeed > .gkAvatar:hover > img {
+	opacity: 0.85; filter: alpha(opacity=85);
+}
 .gkJSFeed .gkUsername {
+	display: block;
 	font-size: 16px;
 	font-weight: 500;
-	padding: 15px 0;
+	padding: 8px 0 14px;
 	text-transform: uppercase;
 }
 .gkJSFeed .gkUsername,
@@ -47,16 +63,17 @@
 .gkJSFeed p,
 .gkJSFeed p a {
 	color: #999;
-	font-size: 13px;
-	line-height: 1.3;
+	font-size: 14px;
+	line-height: 1.4;
 }
+.gkJSFeed p { margin: 0 0 10px}
 .gkJSFeed p a:active,
 .gkJSFeed p a:focus,
 .gkJSFeed p a:hover,
 .gkJSFeed .gkUsername:active,
 .gkJSFeed .gkUsername:focus,
 .gkJSFeed .gkUsername:hover {
-	color: #db4a37;
+	color: #272727;
 }
 .gkJSFeed .gkReadon {
 	color: #db4a37;
@@ -70,8 +87,22 @@
 	background-position: center center;
 	background-size: cover;
 	height: 100%;
+	opacity: 1; filter: alpha(opacity=100);
 	position: absolute;
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0);
+	-o-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 	width: 100%;
+}
+.gkJSFeedType-photo > a:hover {
+	opacity: 0.85; fitler: alpha(opacity=85);
 }
 .gkJSFeedType-photo > h3 {
 	left: 0;
@@ -96,4 +127,85 @@
 .gkJSFeedType-photo > h3 a:focus,
 .gkJSFeedType-photo > h3 a:hover {
 	color: #db4a37;
+}
+
+@media (max-width:800px) {
+	.gkJSFeed > .gkStatus {
+		padding: 15px;
+	}
+	.gkJSFeed .gkUsername {
+		font-size: 14px;
+		padding: 4px 0 10px;
+	}
+	.gkJSFeed p,
+	.gkJSFeed p a {
+		font-size: 12px;
+	}
+	.gkJSFeed .gkReadon {
+		font-size: 11px;
+	}
+}
+
+/* User content type */
+.gkJSFeedType-user {
+	background: #e74c3c;
+}
+.gkJSFeedType-user > a {
+	background-position: center center;
+	background-size: cover;
+	height: 100%;
+	opacity: 1; filter: alpha(opacity=100);
+	position: absolute;
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0);
+	-o-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+	width: 100%!important;
+}
+.gkJSFeedType-user > a > span {
+	background: #e74c3c;
+	color: #fff;
+	height: 100%;
+	opacity: 0; filter: alpha(opacity=0);
+	position: absolute;
+	text-align: center;
+	top: 0;
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	width: 100%;
+}
+.gkJSFeedType-user:hover > a > span {
+	opacity: 1; filter: alpha(opacity=100);
+}
+.gkJSFeedType-user > a > span > em {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	font-size: 16px;
+	font-weight: bold;
+	left: 0;
+	line-height: 20px;
+	margin: 20px 0 0 0;
+	padding: 0 10px;
+	position: absolute;
+	top: 50%;
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-ms-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	width: 100%;
+}
+.gkJSFeedType-user:hover > a > span > em {
+	margin: -10px 0 0 0;
 }
